# skillflow

./: .gitignore  README.md  pyproject.toml
docs/: skill-requirement-template.md
src/: cli.py  skillflow_env.py
src/prompts/: __init__.py  manager.py
src/prompts/skillevol/: add_examples.md  autonomous_exploration.md  clarify.md  default_program.md  enhance_constraints.md
src/prompts/skillforge/: creator_system.md
src/prompts/skillgrade/: agent_system.md  boundary_generation.md  difficulty_assessment.md  example_extraction.md  grader_evaluation.md  grader_rubric.md  skill_analysis.md  skill_review.md  skill_summary.md  task_deduplication.md  test_case_generation.md
src/skillevol/: __init__.py  commands.py
src/skillevol/core/: __init__.py  decision.py  evaluator.py  explorer.py  llm.py  types.py
src/skillevol/operators/: __init__.py  add_examples.py  base.py  clarify.py  enhance_constraints.py
src/skillforge/: __init__.py  agent_creator.py  creator.py  middleware.py  template_skills.py
src/skillgrade/: __init__.py  __main__.py  cli.py  types.py
src/skillgrade/agents/: __init__.py  base.py  deep_agent.py  oai_agent.py
src/skillgrade/commands/: __init__.py  eval.py  preview.py  smoke.py
src/skillgrade/core/: __init__.py  analysis.py  boundary.py  config.py  context.py  deduplication.py  difficulty.py  eval_config.py  generator.py  metrics.py  planning.py  runner.py  skill_stats.py  skill_tracking.py  skills.py  static_analyzer.py  understanding.py  workspace.py
src/skillgrade/graders/: __init__.py  base.py  deterministic.py  llm_rubric.py  trigger_grader.py
src/skillgrade/graph/: __init__.py  nodes.py  smoke_graph.py  (+1 more)
templates/: eval.yaml.template
tests/: test_config.py  test_grader.py  test_runner.py  test_skillforge_agent.py  test_skills.py  test_smoke.py  test_workspace.py
(+22 files in other folders)
